hack_agent/force-app/main/default/objects/Salesforce_General_Setting__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>API name of the Salesforce object</description>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>