hack_agent/force-app/main/default/objects/Salesforce_General_Setting__c/fields/Query_Fields__c.field-meta.xml
<CustomField>
    <fullName>Query_Fields__c</fullName>
    <description>Comma-separated list of field API names to query</description>
    <label>Query Fields</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>