hack_agent/force-app/main/default/objects/Salesforce_General_Setting__c/fields/SF2_Component_Name__c.field-meta.xml
<CustomField>
    <fullName>SF2_Component_Name__c</fullName>
    <description>Name of the Salesforce component</description>
    <label>SF2 Component Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>