hack_agent/force-app/main/default/objects/Salesforce_General_Setting__c/fields/SF2_Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>SF2_Icon_URL__c</fullName>
    <description>URL of the icon for the component</description>
    <label>SF2 Icon URL</label>
    <type>Url</type>
</CustomField>